results/classifier/zero-shot/118/review/1029
user-level: 0.937
risc-v: 0.932
TCG: 0.920
hypervisor: 0.915
debug: 0.905
virtual: 0.900
ppc: 0.899
mistranslation: 0.898
register: 0.897
peripherals: 0.891
device: 0.887
vnc: 0.880
permissions: 0.872
semantic: 0.871
performance: 0.866
graphic: 0.860
arm: 0.857
KVM: 0.856
architecture: 0.854
PID: 0.850
assembly: 0.850
kernel: 0.843
socket: 0.841
VMM: 0.828
network: 0.818
files: 0.817
boot: 0.816
i386: 0.776
x86: 0.737
--------------------
hypervisor: 0.873
TCG: 0.365
files: 0.211
debug: 0.087
virtual: 0.066
user-level: 0.064
arm: 0.056
kernel: 0.039
semantic: 0.027
register: 0.025
architecture: 0.019
PID: 0.016
device: 0.006
boot: 0.006
permissions: 0.005
performance: 0.004
network: 0.004
ppc: 0.004
assembly: 0.003
graphic: 0.003
x86: 0.003
socket: 0.002
i386: 0.002
VMM: 0.002
risc-v: 0.002
peripherals: 0.001
KVM: 0.001
mistranslation: 0.001
vnc: 0.001

Unable to build qemu on macOS Monterey, M1 Pro
Description of problem:
qemu doesn't build, producing the following error:
```
$ make
# snip
FAILED: libqemu-aarch64-softmmu.fa.p/target_arm_hvf_hvf.c.o 
cc -Ilibqemu-aarch64-softmmu.fa.p -I. -I.. -Itarget/arm -I../target/arm -I../dtc/libfdt -I../capstone/include/capstone -Iqapi -Itrace -Iui -Iui/shader -I/opt/homebrew/Cellar/pixman/0.40.0/include/pixman-1 -I/opt/homebrew/Cellar/glib/2.72.1/include -I/opt/homebrew/Cellar/glib/2.72.1/include/glib-2.0 -I/opt/homebrew/Cellar/glib/2.72.1/lib/glib-2.0/include -I/opt/homebrew/opt/gettext/include -I/opt/homebrew/Cellar/pcre/8.45/include -fcolor-diagnostics -Wall -Winvalid-pch -std=gnu11 -O2 -g -iquote . -iquote /Users/duncanbayne/code/qemu -iquote /Users/duncanbayne/code/qemu/include -iquote /Users/duncanbayne/code/qemu/disas/libvixl -iquote /Users/duncanbayne/code/qemu/tcg/aarch64 -DOS_OBJECT_USE_OBJC=0 -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wstrict-prototypes -Wredundant-decls -Wundef -Wwrite-strings -Wmissing-prototypes -fno-strict-aliasing -fno-common -fwrapv -Wold-style-definition -Wtype-limits -Wformat-security -Wformat-y2k -Winit-self -Wignored-qualifiers -Wempty-body -Wnested-externs -Wendif-labels -Wexpansion-to-defined -Wno-initializer-overrides -Wno-missing-include-dirs -Wno-shift-negative-value -Wno-string-plus-int -Wno-typedef-redefinition -Wno-tautological-type-limit-compare -Wno-psabi -fstack-protector-strong -DNEED_CPU_H '-DCONFIG_TARGET="aarch64-softmmu-config-target.h"' '-DCONFIG_DEVICES="aarch64-softmmu-config-devices.h"' -MD -MQ libqemu-aarch64-softmmu.fa.p/target_arm_hvf_hvf.c.o -MF libqemu-aarch64-softmmu.fa.p/target_arm_hvf_hvf.c.o.d -o libqemu-aarch64-softmmu.fa.p/target_arm_hvf_hvf.c.o -c ../target/arm/hvf/hvf.c
../target/arm/hvf/hvf.c:586:15: error: unknown type name 'ARMCPRegInfo'; did you mean 'ARMCPUInfo'?
        const ARMCPRegInfo *ri;
              ^~~~~~~~~~~~
              ARMCPUInfo
../target/arm/cpu-qom.h:38:3: note: 'ARMCPUInfo' declared here
} ARMCPUInfo;
  ^
../target/arm/hvf/hvf.c:589:14: error: implicit declaration of function 'get_arm_cp_reginfo' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        ri = get_arm_cp_reginfo(arm_cpu->cp_regs, key);
             ^
../target/arm/hvf/hvf.c:589:12: warning: incompatible integer to pointer conversion assigning to 'const ARMCPUInfo *' (aka 'const struct ARMCPUInfo *') from 'int' [-Wint-conversion]
        ri = get_arm_cp_reginfo(arm_cpu->cp_regs, key);
           ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../target/arm/hvf/hvf.c:591:26: error: no member named 'type' in 'struct ARMCPUInfo'
            assert(!(ri->type & ARM_CP_NO_RAW));
                     ~~  ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/assert.h:99:25: note: expanded from macro 'assert'
    (__builtin_expect(!(e), 0) ? __assert_rtn(__func__, __ASSERT_FILE_NAME, __LINE__, #e) : (void)0)
                        ^
../target/arm/hvf/hvf.c:591:33: error: use of undeclared identifier 'ARM_CP_NO_RAW'
            assert(!(ri->type & ARM_CP_NO_RAW));
                                ^
1 warning and 4 errors generated.
ninja: build stopped: subcommand failed.
make[1]: *** [run-ninja] Error 1
make: *** [all] Error 2
```
Steps to reproduce:
```
git clone https://gitlab.com/qemu-project/qemu.git
cd qemu
./configure
make
```
Additional information:
```
$ cc --version
Apple clang version 13.1.6 (clang-1316.0.21.2.5)
Target: arm64-apple-darwin21.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

$ ninja --version
1.10.2.git.kitware.jobserver-1
```
